# mlx

./: AGENTS.md  CMakeLists.txt  PROGRESS.md  debug_sin.py  test_sin_precision.py
mlx/: CMakeLists.txt  array.cpp  fast.cpp  fast_primitives.h  ops.cpp  primitives.cpp  primitives.h  scheduler.cpp
mlx/backend/cpu/: encoder.cpp  quantized.cpp
mlx/backend/vulkan/: ARCHITECTURE.md  ARCHITECTURE_ALIGNMENT.md  CMakeLists.txt  METAL_ALIGNMENT_COMPLETE.md  OPERATOR_GUIDE.md  VALIDATION_REPORT.md  buffer.cpp  buffer.h  device.cpp  device.h  device_info.cpp  event.cpp  fence.cpp  gpu_fallback.cpp  gpu_interface.cpp  kernel_registry.cpp  kernel_registry.h  op_profiler.cpp  op_profiler.h
mlx/backend/vulkan/primitives/: binary.cpp  fallback.cpp  placeholder.cpp  unary.cpp
mlx/backend/vulkan/shaders/: add.comp  add.spv  add_bf16.comp  add_bf16.spv  add_bf16_bcast.comp  add_bf16_bcast.spv  add_bf16_bcast_spv.h  add_bf16_scalar.comp  add_bf16_scalar.spv  add_bf16_scalar_spv.h  add_bf16_spv.h  add_rmsnorm_bf16.comp  add_rmsnorm_bf16.spv  add_rmsnorm_bf16_spv.h  add_rmsnorm_bf16_subgroup.comp  add_rmsnorm_bf16_subgroup.spv  add_rmsnorm_bf16_subgroup_spv.h  add_spv.h  affine_dequantize_bf16_g128_b4.comp  affine_dequantize_bf16_g128_b4.spv  affine_dequantize_bf16_g128_b4_spv.h  argmax_bf16_lastdim.comp  argmax_bf16_lastdim.spv  argmax_bf16_lastdim_spv.h  argmax_f32_lastdim.comp  argmax_f32_lastdim.spv  argmax_f32_lastdim_spv.h  binary_add.comp  cos.comp  cos.spv  cos_spv.h  gather_rows_words_i32_idx.comp  gather_rows_words_i32_idx.spv  gather_rows_words_i32_idx_spv.h  log10.comp  log10.spv  log10_spv.h  log2.comp  log2.spv  log2_spv.h  (+150 more)
python/src/: buffer.h  convert.cpp
python/tests/: test_fast_sdpa.py  test_ops.py
